@@ -26,4 +26,4 @@ Jon Morby                  <jon@fido.net>
 Paul Martin                <pm@zetnet.net>
 Jonathan Yarden            <jyarden@bluegrass.net>
 Patrick Cole               <z@amused.net>
-Khaled Al Hamwi            <kh.alhamwi@gmail.com>
+Rhys Kidd                  <rhys.kidd@staff.westnet.com.au>
